--- a/NewEraFitness/AndroidManifest.xml
+++ b/NewEraFitness/AndroidManifest.xml
@@ -10,13 +10,13 @@
 
     <application
         android:allowBackup="true"
-        android:icon="@drawable/ic_app_logo"
+        android:icon="@drawable/ic_launcher"
         android:label="@string/app_name"
         android:theme="@style/AppTheme" >
         <activity
             android:name="com.gym.newerafitness.MainActivity"
             android:label="@string/app_name"
-            android:logo="@drawable/ic_app_logo" >
+            android:logo="@drawable/ic_launcher" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
